added 'addpatient' dialog

--- a/frontend/ui/src/index.css
+++ b/frontend/ui/src/index.css
@@ -94,3 +94,13 @@ code {
   font-family: Roboto;
   height: 200px;
 }
+
+.add-patient-dialog {
+  width: 50vw;
+}
+
+@media screen and (max-width: 40em) {
+  .add-patient-dialog {
+    width: 80vw;
+  }
+}
